--- a/trustbridge-backend/package.json
+++ b/trustbridge-backend/package.json
@@ -56,7 +56,7 @@
     "@types/nodemailer": "^7.0.1",
     "@types/stripe": "^8.0.416",
     "apollo-server-express": "^3.12.1",
-    "axios": "^1.7.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.0",
     "canvas": "^3.2.0",
@@ -82,6 +82,7 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "paystack-node": "^0.3.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.0",
