--- a/trustbridge-frontend/package.json
+++ b/trustbridge-frontend/package.json
@@ -18,7 +18,10 @@
     "@tanstack/react-query": "^5.87.4",
     "@walletconnect/core": "^2.21.9",
     "@walletconnect/modal": "^2.7.0",
+    "@walletconnect/qrcode-modal": "^1.8.0",
     "@walletconnect/types": "^2.21.9",
+    "@walletconnect/utils": "^2.21.9",
+    "@walletconnect/web3wallet": "^1.16.1",
     "axios": "^1.6.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
