--- a/trustbridge-backend/package.json
+++ b/trustbridge-backend/package.json
@@ -84,6 +84,7 @@
     "passport-local": "^1.0.0",
     "paystack-node": "^0.3.0",
     "reflect-metadata": "^0.1.13",
+    "resend": "^4.8.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.0",
     "stripe": "^18.5.0",
