--- a/trustbridge-backend/env.example
+++ b/trustbridge-backend/env.example
@@ -1,54 +1,45 @@
-# Server Configuration
-PORT=4000
-NODE_ENV=development
-FRONTEND_URL=http://localhost:3000
+# TrustBridge Backend Environment Variables
+# Copy this file to .env and update with your values
 
-# Database
+# Database Configuration
 MONGODB_URI=mongodb://localhost:27017/trustbridge
 
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-here
-JWT_EXPIRES_IN=7d
+# Frontend URLs for CORS
+FRONTEND_URL=https://www.tbafrica.xyz
+TBAFRICA_URL=https://www.tbafrica.xyz
+VERCEL_URL=trust-bridge-africa.vercel.app
 
 # Hedera Configuration
 HEDERA_ACCOUNT_ID=0.0.123456
-HEDERA_PRIVATE_KEY=302e020100300506032b657004220420...
-HEDERA_TESTNET_RPC_URL=https://testnet.hashio.io/api
+HEDERA_PRIVATE_KEY=your_hedera_private_key_here
+HEDERA_NETWORK=testnet
 
-# Chainlink Configuration
-CHAINLINK_PRICE_FEED_COFFEE=0x...
-CHAINLINK_PRICE_FEED_AGRICULTURAL=0x...
-CHAINLINK_VRF_COORDINATOR=0x...
-CHAINLINK_VRF_KEY_HASH=0x...
-CHAINLINK_AUTOMATION_REGISTRY=0x...
-
-# External APIs
-OPENWEATHER_API_KEY=your-openweather-api-key
-GOOGLE_MAPS_API_KEY=your-google-maps-api-key
-
-# KYC Services
-DIDIT_API_KEY=your-didit-api-key
-DIDIT_WORKFLOW_ID=your-didit-workflow-id
-DIDIT_ATTESTOR_WORKFLOW_ID=your-didit-attestor-workflow-id
-ONFIDO_API_KEY=your-onfido-api-key
-ONFIDO_WORKFLOW_ID=your-onfido-workflow-id
-
-# Redis (for caching and queues)
-REDIS_URL=redis://localhost:6379
-
-# File Upload
-MAX_FILE_SIZE=10485760
-UPLOAD_PATH=./uploads
-
-# IPFS/Pinata Configuration
+# Pinata IPFS Configuration
 PINATA_API_KEY=your_pinata_api_key_here
 PINATA_SECRET_KEY=your_pinata_secret_key_here
-PINATA_GATEWAY_URL=your_gateway_domain.mypinata.cloud
 
-# Rate Limiting
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+# Paga Payment Configuration
+PAGA_PUBLIC_KEY=your_paga_public_key_here
+PAGA_SECRET_KEY=your_paga_secret_key_here
+PAGA_HASH_KEY=your_paga_hash_key_here
+PAGA_CALLBACK_URL=https://trustbridge-africa.onrender.com/api/paga/webhook
 
-# Monitoring
-LOG_LEVEL=info
-ENABLE_METRICS=true
+# Google AI Studio Configuration
+GOOGLE_AI_API_KEY=your_google_ai_api_key_here
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRES_IN=7d
+
+# Server Configuration
+PORT=4001
+NODE_ENV=production
+
+# Development vs Production
+# For development, use:
+# FRONTEND_URL=http://localhost:3000
+# NODE_ENV=development
+
+# For production, use:
+# FRONTEND_URL=https://www.tbafrica.xyz
+# NODE_ENV=production
